# macrolibs

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: deploy.yml
macro_lib/filemacros/: filemacros.py
macro_lib/typemacros/: typemacros.py
macrolib/filemacros/: __init__.py  jsonmacros.py
macrolib/typemacros/: __init__.py
macrolibs/filemacros/: filemacros.py  jsonmacros.py
macrolibs/misc/: misc.py
macrolibs/typemacros/: __init__.py  _replace_value.py  hashmacros.py  old_functions.py  searchmacros.py  typemacros.py
